--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ background: #fff;
 
   
 body {
-  background-image: url(https://dm0qx8t0i9gc9.cloudfront.net/watermarks/image/rDtN98Qoishumwih/abstract-musical-background-with-movie-entertainment-objects_SB_PM.jpg);
-  background-size: center;
+  background-image: url(https://image.freepik.com/free-photo/empty-white-studio-backdrops-spotlight-entertainment-room-background-with-showing-scene_79161-1145.jpg);
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
