--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ background: #fff;
 
   
 body {
-  background-image: url(https://image.freepik.com/free-photo/empty-white-studio-backdrops-spotlight-entertainment-room-background-with-showing-scene_79161-1145.jpg);
+  background-image: url(https://media.istockphoto.com/photos/spotlight-stage-show-entertainment-background-picture-id1077808084?k=6&m=1077808084&s=170667a&w=0&h=w0PNxf102KL9xIFVInNk0JI7kQxuJmhokuBEtI3V5qs=);
   background-size: cover;
   background-repeat: no-repeat;
 }
