--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 .topnav {
   position: relative;
   overflow: hidden;
-  background-color: green;
+  background-color: white;
 }
 
 .topnav a {
@@ -32,7 +32,7 @@
 
 .topnav a.active {
   background-color: lightblue;
-  color: white;
+  color: black;
 }
 
 .topnav-centered a {
@@ -48,7 +48,7 @@
 }
 
 /* Responsive navigation menu (for mobile devices) */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
   .topnav a, .topnav-right {
     float: none;
     display: block;
@@ -321,13 +321,7 @@ members will appear in every show, too.</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;
-<p><b>set on a farm in Yorkshire, in the north of England.</br>
-(adaptmembers will appear in every show, too.</br>
-There are lots of different soaps  but there are three main</br>
-popular ones. ‘Coronation Street’ in a suburb of Manchester</br>
-and it’s supposed to represent workin England. Then there’s</br>
-‘Eastenders’ which started in 1985,, and ‘Emmerdale’, which is</br>
-set on a farm</br></b></p>
+<img src="https://media.giphy.com/media/3ohBVuxgquMKGvbBDy/giphy.gif">
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
