--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 .topnav {
   position: relative;
   overflow: hidden;
-  background-color: white;
+  background-color: blue;
 }
 
 .topnav a {
@@ -22,16 +22,16 @@
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 30px;
 }
 
 .topnav a:hover {
-  background-color: pink;
+  background-color: white;
   color: black;
 }
 
 .topnav a.active {
-  background-color: lightblue;
+  background-color: black;
   color: black;
 }
 
@@ -280,31 +280,6 @@ body {
 "</a>
  <p><a href="https://www.google.com/">Google</a></p>
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  &nbsp;
-  <p><b>In the early days of TV,  Back in those days, it</br>
-    was traditional for the husband to  and look</br>
-  after the house and the children.  aimed at entertaining</br>
-the housewives who wouldthe washing.</br>
-Companies selling washing powder would advertise their  when these</br>
-dramas were on, and sometimes those c the drama. Hence</br>
-the word ‘soap’.</br>
-So what about the word opera? Well, exaggeration</br>
-of real life. They are supposed to  them entertaining, lots</br>
-of dramatic events, probably much more</br>
-regularly than they would in a normal neighbourhood.</br>
-Most soap operasg. Each show will have several</br>
-different storylines  several shows. The same cast</br>
-members will appear in every show, too.</br>
-</b></p>
- 
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
@@ -321,7 +296,7 @@ members will appear in every show, too.</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;
-<img src="https://media.giphy.com/media/3ohBVuxgquMKGvbBDy/giphy.gif">
+<center><img src="https://38.media.tumblr.com/dc68f78a7aad55237b97b924dd7bf255/tumblr_ncokjhIIoW1tg72yro1_r1_500.gif"></center>
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
