--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 .topnav {
   position: relative;
   overflow: hidden;
-  background-color: blue;
+  background-color: pink;
 }
 
 .topnav a {
@@ -78,7 +78,7 @@ border: solid;
 padding: 3px;  
 margin-top: 10px;  
 margin-left: 10px;  
-background: #fff;  
+background: pink;  
 font-size: 20px;  
 border: solid;
     border-radius:2px;
@@ -296,7 +296,7 @@ body {
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;
-<center><img src="https://38.media.tumblr.com/dc68f78a7aad55237b97b924dd7bf255/tumblr_ncokjhIIoW1tg72yro1_r1_500.gif"></center>
+<center><img src="https://38.media.tumblr.com/dc68f78a7aad55237b97b924dd7bf255/tumblr_ncokjhIIoW1tg72yro1_r1_500.gif" width="1000" height="800"></center>
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
