--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 .topnav {
   position: relative;
   overflow: hidden;
-  background-color: pink;
+  background-color:fuschia;
 }
 
 .topnav a {
@@ -248,17 +248,17 @@ body {
 
   <!-- Centered link -->
   <div class="topnav-centered">
-    <a href="#home" class="active">Home</a>
+    <a href="#home" class="active">HOME</a>
   </div>
   
   <!-- Left-aligned links (default) -->
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a href="#news">NEWS</a>
+  <a href="#contact">CONTACTS</a>
   
   <!-- Right-aligned links -->
   <div class="topnav-right">
     <a href="#VIDEOS">VIDEOS</a>
-    <a href="#about">About</a>
+    <a href="#about">ABOOUT</a>
   </div>
   
 </div>
@@ -296,7 +296,7 @@ body {
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;
-<center><img src="https://38.media.tumblr.com/dc68f78a7aad55237b97b924dd7bf255/tumblr_ncokjhIIoW1tg72yro1_r1_500.gif" width="1000" height="800"></center>
+<center><img src="https://38.media.tumblr.com/dc68f78a7aad55237b97b924dd7bf255/tumblr_ncokjhIIoW1tg72yro1_r1_500.gif" width="1000" height="500"></center>
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
@@ -365,6 +365,7 @@ function myFunction(imgs) {
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+<center>
 <!-- Add font awesome icons -->
 <a href="#" class="fa fa-facebook"></a>
 <a href="#" class="fa fa-twitter"></a>
@@ -372,5 +373,6 @@ function myFunction(imgs) {
 <a href="#" class="fa fa-linkedin"></a>
 <a href="#" class="fa fa-youtube"></a>
 <a href="#" class="fa fa-instagram"></a>
+</center>
 </body>
 </html>
